--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,14 +1,15 @@
 .card {
   background-image: linear-gradient(
       0deg,
-      rgba(101, 60, 103, 0.5) 0%,
-      rgba(161, 62, 92, 0.5) 39%,
-      rgba(177, 80, 55, 0.5) 100%
+      rgba(101, 60, 103, 0.65) 0%,
+      rgba(161, 62, 92, 0.65) 39%,
+      rgba(177, 80, 55, 0.65) 100%
     ),
     url(../../public/assets/images/beach.jpg);
   background-size: cover;
   background-position: top;
-
+  width: auto;
+  height: 780px;
   //   border: 2px solid black;
   color: white;
   border-radius: 25px;
@@ -31,6 +32,11 @@
       border: none;
       color: #d74b76;
       font-size: 1.25rem;
+
+      &:focus {
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+          rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+      }
     }
     &-btn {
       background-color: #ffffff;
@@ -45,6 +51,18 @@
       align-items: center;
       outline: none;
       border: none;
+      transition: transform 0.2s;
+
+      &:hover {
+        transform: scale(1.05);
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+          rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+      }
+
+      &:active {
+        transform: scale(0.95);
+      }
+
       img {
         display: block;
         margin: 1rem;
@@ -86,6 +104,8 @@
       grid-template-columns: max-content 1fr;
       justify-items: center;
       gap: 1rem;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+        rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     }
 
     img {
