--- a/src/styles/_container.scss
+++ b/src/styles/_container.scss
@@ -1,9 +1,8 @@
 .container {
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
-  padding: 3rem;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min-content, 1fr));
-  gap: 2rem;
-  justify-items: center;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
